fix body margin and alignment section 3

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: 'Poppins';
+  margin: 0;
 }
 
 #header-first-row {
@@ -60,6 +61,7 @@ nav a {
     background-size: 25px 25px;
     background-position-y: 50%;
     background-position-x: 10px;
+    box-sizing: border-box;
 }
 
 .submit-btn {
@@ -69,6 +71,7 @@ nav a {
     font-size: 15px;
     color: white;
     border: none;
+    box-sizing: border-box;
 }
 
 .join-btn {
@@ -172,6 +175,7 @@ nav a {
 
 .container div img {
     width: 30px;
+    height: 40px;
 }
 
 .container h4 {
